--- a/styles/schedule.css
+++ b/styles/schedule.css
@@ -12,6 +12,7 @@ body{
     padding-left: 16px;
     padding-right: 16px;
     position: relative;
+    max-height: 100vh;
 }
 
 /* Back Button Container */
@@ -57,18 +58,27 @@ body{
     z-index: 999;
 }
 
+.month-header{
+    text-align: center;
+    margin-bottom: 32px;
+    width: 100%;
+}
+
 /* Match Card Container */
 .match-card {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; /* 3 columns */
-    grid-template-rows: auto; /* 2 rows */
+    grid-template-rows: 32px auto; /* 2 rows */
     background-color: var(--background-color-dark);
     align-items: center;
     justify-content: center;
     text-align: center;
+    max-width: 400px;
+    height: 152px;
 }
 
 /* Match Name - First Row */
+
 .match-name {
     font-weight: bold;
     font-style: italic;
@@ -76,7 +86,14 @@ body{
     color: white;
     text-align: start;
     padding: 16px 16px 4px 16px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Limit to 4 lines */
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
 
 /* Players String (Second Row) */
 .players-string {
@@ -121,4 +138,20 @@ body{
     color: white;
     padding-top: 8px;
     padding-bottom: 8px;
+    height: 32px;
+}
+
+.schedule-container {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    overflow-y: scroll;  /* Enables scrolling */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.schedule-container::-webkit-scrollbar {
+    display: none; /* For Webkit browsers (Chrome, Safari, Edge) */
 }
