--- a/styles/schedule.css
+++ b/styles/schedule.css
@@ -1,6 +1,6 @@
 @import url(general.css);
 body{
-    background-color: var(--background-color-light);
+    background: linear-gradient(180deg, var(--background-color-light) 70%, var(--background-color-dark) 100%); /* Diagonal gradient from pink to orange */
 }
 .content-container {
     display: flex;
@@ -39,7 +39,6 @@ body{
 
 /* Scrollable Content */
 .content {
-    flex-grow: 1; /* Take up remaining space */
     overflow-y: auto; /* Make this section scrollable */
     padding: 16px;
     padding-top: 76px;
@@ -75,6 +74,7 @@ body{
     text-align: center;
     max-width: 400px;
     height: 152px;
+    box-shadow: 0px 8px 8px rgba(var(--background-color-dark-rgb), 0.8); /* Add shadow */
 }
 
 /* Match Name - First Row */
